syntax = "proto3";

// Specify the Go package location and import path
option go_package = "/internal/api/protobufs/gst-service;protobufs";

service GSTR1Service {
    rpc SaveGSTR1 (GSTR1Request) returns (GSTR1Response);
    rpc SubmitGSTR1 (GSTR1SubmitRequest) returns (GSTR1SubmitResponse);
    rpc FileGSTR1 (GSTR1FileRequest) returns (GSTR1FileResponse);
    rpc GetGSTR1Status (GSTR1StatusRequest) returns (GSTR1StatusResponse);
    rpc ReconcileGSTR1 (GSTR1ReconcileRequest) returns (GSTR1ReconcileResponse);
}

message GSTR1Request {
    string gstin = 1;
    string return_period = 2;
    repeated GSTR1Invoice invoices = 3;
}

message GSTR1Invoice {
    string invoice_number = 1;
    string invoice_date = 2;
    string gstin_supplier = 3;
    string gstin_receiver = 4;
    string taxable_value = 5;
    string tax_amount = 6;
    string hsn_code = 7;
    string place_of_supply = 8;
}

message GSTR1Response {
    string ref_id = 1;
    string status = 2;
}

message GSTR1SubmitRequest {
    string gstin = 1;
    string return_period = 2;
}

message GSTR1SubmitResponse {
    string arn = 1;
    string status = 2;
}

message GSTR1FileRequest {
    string gstin = 1;
    string return_period = 2;
    string arn = 3;
}

message GSTR1FileResponse {
    string filing_status = 1;
    string message = 2;
}

message GSTR1StatusRequest {
    string gstin = 1;
    string return_period = 2;
    string arn = 3;
}

message GSTR1StatusResponse {
    string status = 1;
    string message = 2;
}

message GSTR1ReconcileRequest {
    string gstin = 1;
    string return_period = 2;
    repeated GSTR1Invoice invoices = 3;
}

message GSTR1ReconcileResponse {
    string status = 1;
    repeated GSTR1Invoice reconciliation_details = 2;
}
